--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -99,6 +99,28 @@ body {
     display: block;
 }
 
+.app-photo{
+    height: 18rem;
+}
+
+.carousel-indicators button {
+    border-radius: 100% !important;
+    width: 0.5rem !important;
+    height: 0.5rem !important;
+}
+
+.carousel-indicators button.active {
+    background-color: #3ECF8E !important;
+}
+
+#carouselAppPhotos .carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpolyline points='11 1 5 8 11 15' fill='none' stroke='%233ECF8E' stroke-width='2.5' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
+}
+
+#carouselAppPhotos .carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpolyline points='5 1 11 8 5 15' fill='none' stroke='%233ECF8E' stroke-width='2.5' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
+}
+
 @keyframes fillProgressJS {
     from {
         width: 0;
@@ -107,6 +129,10 @@ body {
     to {
         width: var(--target-width);
     }
+}
+
+.nav.nav-pills .nav-link{
+    cursor: pointer;
 }
 
 .nav.nav-pills .nav-link.green {
@@ -245,9 +271,34 @@ textarea.form-control {
     transition: all 0.3s !important;
 }
 
+.btn-app-white {
+    border-radius: 30px !important;
+    background: transparent !important;
+    border: #fff 1px solid !important;
+    color: #3ECF8E !important;
+    transition: all 0.3s !important;
+}
+
 .btn-app:hover {
     background: #3ECF8E !important;
     color: #fff !important;
+}
+
+.btn-app-white:hover {
+    background: #fff!important;
+    color: #3ECF8E !important;
+}
+
+.student-image {
+    height: 13rem;
+    border: 3px solid #3ECF8E !important;
+    box-shadow: 6px 6px 9.6px 0px #3ECF8E;
+}
+
+.student-image-white {
+    height: 13rem;
+    border: 3px solid #fff !important;
+    box-shadow: 6px 6px 9.6px 0px #fff;
 }
 
 .image-functionality-alunos{
@@ -256,6 +307,10 @@ textarea.form-control {
 
 .image-functionality-notificacoes{
     width: 25rem !important;
+}
+
+.gap-students{
+    gap:12rem !important;
 }
 
 footer {
@@ -281,7 +336,13 @@ footer a:hover {
 .copyright-text{
     font-size: 0.5rem;
 }
-/* mobile */
+
+.modal-content{
+    background-color: #161717 !important;
+    color: #fff !important;
+}
+
+/* ajustes para mobile */
 @media screen and (max-width: 767px) {
     .logo {
         width: 6rem;
@@ -322,8 +383,17 @@ footer a:hover {
     .image-functionality-notificacoes{
         width: 15rem !important;
     }
+
+    .gap-students{
+        gap:5rem !important;
+    }
+
+    .app-photo{
+        height: 10rem;
+    }
 }
 
+/* Ajustes especificos para um determinado ecrã*/
 @media screen and (max-width: 665px) {
     .nav.nav-pills .nav-link {
         border-radius: 30px !important;
